fix: gap for empty header element

--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -516,9 +516,9 @@ textarea
 
 .main
   display: grid
-  grid-template-rows: 1fr auto
+  grid-template-rows: 0fr auto 60px auto
   grid-template-columns: 1fr
-  gap: 60px
+  gap: 0
   padding: 60px 32px 0
   width: 100%
 
